tests/base/parser/bad/lib/lmodule-import-with.scillib
scilla_version 0

import boolutils

library TestLib
